fixed services assurance spacing

--- a/css/single-portfolio-style.css
+++ b/css/single-portfolio-style.css
@@ -2,9 +2,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 
 /* will realistically change these colors to be more web friendly */
-*,
-*::before,
-*::after {
+* {
   margin: 0; /*supress browser defaults and select alternative box model  */
   padding: 0; /*  */
   box-sizing: border-box;
@@ -130,10 +128,10 @@ body {
   background: var(--bg-secondary);
   display: flex;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: space-between;
   height: 100px;
   width: 100%;
-  max-width: 550px;
+  max-width: 400px;
   border-radius: 10px;
   padding: 0 30px; /* y first, x second. 0 on y, amnt on x */
   border: 1px solid transparent;
@@ -227,4 +225,40 @@ body {
 
 .about-me .info button {
   margin-top: 5px;
+}
+
+/* skills section 
+      .left
+        .info
+          h3
+          p
+          .hire-btn
+      .right
+        .icon > i*12
+              */
+.skills {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  padding: 0 50px;
+}
+
+.skills .left {
+  width: 680px;
+}
+
+.skills .left .info h3 {
+  color: var(--font-color-primary);
+  font-size: 30px;
+}
+
+.skills .left .info p {
+  color: var(--font-color-secondary);
+  font-size: 14px;
+}
+
+.skills .left .info button {
+  margin-top: 30px;
+}
+.skills .right {
 }
